ingress-ip-direto.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: direito-lux-ingress-default
  namespace: direito-lux-staging
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  defaultBackend:
    service:
      name: frontend
      port:
        number: 3000
